# terra-incognita

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
crates/terra-agent/: Cargo.toml
crates/terra-agent/prompts/: sql_explorer.md  system.md
crates/terra-agent/src/: app.rs  event.rs  llm.rs  main.rs  session.rs  sql.rs  store.rs  ui.rs
crates/terra-agent/src/llm/: anthropic.rs  http.rs  mod.rs  openai.rs
crates/terra-cli/: Cargo.toml
crates/terra-cli/src/: main.rs
crates/terra-core/: Cargo.toml
crates/terra-core-v0_2/: Cargo.toml
crates/terra-core-v0_2/src/: lib.rs  terra.rs
crates/terra-core-v0_2/src/command/: command_state.rs  execute_transaction.rs  mod.rs
crates/terra-core-v0_2/src/command/executor/: checkout.rs  get_branch.rs  list_managed.rs  list_transactions.rs  mod.rs  similar_entities.rs  state.rs  touched_entities.rs  transaction.rs
crates/terra-core-v0_2/src/command/input/: get_branch.rs  list_managed.rs  mod.rs  similar_entities.rs  state.rs  touched_entities.rs  transaction.rs
crates/terra-core-v0_2/src/config/: data_schema.rs  project_config.rs
crates/terra-core-v0_2/src/domain/: branch.rs  entity.rs  entity_type.rs  factory.rs  mod.rs  property.rs  tx_meta.rs  validator.rs
crates/terra-core-v0_2/src/embed/: mod.rs
crates/terra-core-v0_2/src/io/: db_item.rs  db_iterator.rs  key_prefix.rs  mod.rs  slug.rs  storage_key.rs  terra_db.rs  valid_prefix.rs  versioned_key.rs  write_batch.rs
crates/terra-core-v0_2/src/store/: assertion_entry.rs  assertion_log_entry.rs  branch.rs  branch_context.rs  branch_entry.rs  entity_change_entry.rs  entity_entry.rs  managed_entry.rs  mod.rs  prefix.rs  schema_attachment_entry.rs  schema_prop_entry.rs  schema_type_entry.rs  slug_entry.rs  slug_index.rs  storage.rs  transaction_entry.rs  transaction_writer.rs  versioned_key.rs  visibility_entry.rs
crates/terra-core-v0_2/src/store/entry/: assertion.rs  branch.rs  embedding.rs  entity.rs  entity_change.rs  mod.rs  slug.rs  transaction.rs
crates/terra-core/migrations/: 001_entity_types.sql  002_entity_properties.sql  003_entity_type_properties.sql
crates/terra-core/src/: lib.rs  terra.rs
crates/terra-core/src/assertion/: branch.rs  branch_io.rs  column.rs  entity.rs  entity_io.rs  investigation.rs  investigation_io.rs  key.rs  log.rs  mod.rs  property_value.rs  session.rs  session_io.rs  store.rs  task.rs  task_io.rs  transaction.rs  visibility.rs  writer.rs
crates/terra-core/src/command/: assert_entity.rs  branch.rs  branch_state.rs  execute.rs  mod.rs  query_entity.rs  session.rs
crates/terra-core/src/command/executor/: checkout.rs  entity_get.rs  entity_history.rs  get_branch.rs  get_transaction.rs  grep_entities.rs  list_managed.rs  list_transactions.rs  mod.rs  similar_entities.rs  touched_entities.rs  transaction.rs
crates/terra-core/src/command/input/: checkout.rs  entity_get.rs  entity_history.rs  get_branch.rs  get_transaction.rs  grep_entities.rs  list_transactions.rs  mod.rs  transaction.rs
crates/terra-core/src/config/: data_schema.rs  mod.rs  project_config.rs
crates/terra-core/src/domain/: entity.rs  entity_history.rs  managed.rs  mod.rs  property.rs  transaction.rs  tx_meta.rs  validator.rs
crates/terra-core/src/embed/: mod.rs  onnx.rs
crates/terra-core/src/io/: db_item.rs  db_iterator.rs  key_prefix.rs  mod.rs  slug.rs  storage_key.rs  storage_value.rs  terra_db.rs  write_batch.rs
crates/terra-core/src/schema/: branch_registry.rs  entity_property.rs  entity_type.rs  migrations.rs  mod.rs  registry.rs  reserved.rs  slug.rs
crates/terra-core/src/store/: branch_context.rs  mod.rs  storage.rs  versioned_key.rs
crates/terra-core/src/store/entry/: assertion.rs  branch.rs  embedding.rs  entity.rs  entity_change.rs  managed.rs  mod.rs  touched.rs  transaction.rs  transaction_log.rs  visibility.rs
crates/terra-core/src/store/query/: entity_slugs.rs  entity_snapshot.rs  mod.rs  properties.rs  similarity.rs
crates/terra-mcp/: Cargo.toml
crates/terra-mcp/src/: jsonrpc.rs  main.rs  server.rs  terra_client.rs  tools.rs
crates/terra-query/: Cargo.toml
crates/terra-query/src/: dispatch.rs  error.rs  format.rs  lib.rs  query.rs  response.rs
crates/terra-server/: Cargo.toml
crates/terra-server-v0_2/: Cargo.toml
crates/terra-server-v0_2/src/: config.rs  dispatch.rs  error.rs  main.rs
crates/terra-server-v0_2/src/dto/: convert.rs  mod.rs  request.rs  response.rs
crates/terra-server/src/: config.rs  dispatch.rs  error.rs  format.rs  main.rs  query.rs  response.rs  state.rs  ui.html  ui.rs  web.rs
crates/terra-server/src/dto/: convert.rs  request.rs  response.rs
demo-terra-client/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
demo-terra-client/prompts/: system.md
demo-terra-client/public/: app.js  index.html  style.css
demo-terra-client/src/: chat.ts  config.ts  context.ts  parse.ts  server.ts  terra.ts  translate.ts
demo-terra-client/src/llm/: anthropic.ts  index.ts  openai.ts  types.ts
demo-terra-client/terra/: project.yaml  schema.yaml  terra-server.yaml
docs/: api.md  concepts.md  configuration.md  embedded.md
mcp/: CONVENTIONS.md  install.sh  schema.yaml
nvim-plugin/lua/terra-incognita/: connection.lua  executor.lua  init.lua  tree.lua  ui.lua
product-docs/: concept.md
product-documents/: query-specification.md  terra-cli-and-nvim-plugin.md  terra-server.md
scripts/: recall-hook.json  terra-recall-hook.py  terractl
ui-server/: index.html  server.mjs
