[package]
name = "terra-agent"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
terra-core = { path = "../terra-core" }
terra-query = { path = "../terra-query" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
native-tls = "0.2"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
