[package]
name = "terra-core-v0_2"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "lz4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
