[package]
name = "terra-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "lz4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
