[package]
name = "terra-core"
version = "0.2.0"
edition = "2021"
license.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dependencies]
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "lz4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
indexmap = { version = "2.13.0", features = ["serde"] }
paste = "1"
typed-builder = "0.23.2"
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
indoc = "2"
tempfile = "3"
