[package]
name = "terra-query"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
terra-core = { path = "../terra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
