[package]
name = "terra-server"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
terra-core = { path = "../terra-core" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
indoc = "2"
tempfile = "3"
